--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -17,10 +17,12 @@
   <h1 class = "store-main-title">Music World E-Commerce Store</h1>
       <div class="top-bar-right" id = "top-bar-right">
           <ul class = "menu" id = "top-navbar"> 
-              <li><a class="menuBar" href = "#">Homepage</a></li>
-              <li><a class="menuBar" href = "#">Login</a></li>
-              <li><a class="menuBar" href = "#">Signup</a></li>
-              <li><a class="menuBar" href = "#">Your Top-10</a></li>
+            <li><a class="menuBar" href = "#">Homepage</a></li>
+            <li><a class="menuBar" href = "#">Dashboard</a></li>
+            <li><a class="menuBar" href = "#">Login</a></li>
+            <li><a class="menuBar" href = "#">Signup</a></li>              
+            <li><a class="menuBar" href = "#">Logout</a></li>
+            <li><a class="menuBar" href = "#">Cart</a></li>
           </ul> 
       </div>
 </div>
