Dashboard and login functionalities added

--- a/views/layouts/index.handlebars
+++ b/views/layouts/index.handlebars
@@ -27,16 +27,16 @@
 
 
 
-<script src="../../public/javascript/add-product.js"></script>
-<script src="../../public/javascript/cart.js"></script>
-<script src="../../public/javascript/delete-product.js"></script>
-<script src="../../public/javascript/login.js"></script>
-<script src="../../public/javascript/logout.js"></script>
-<script src="../../public/javascript/signup.js"></script>
-<script src="../../public/stylesheets/js/foundation.js"></script>
-<script src="../../public/stylesheets/js/foundation.js.map"></script>
-<script src="../../public/stylesheets/js/vendor.js"></script>
-<script src="../../public/stylesheets/js/plugins"></script>
+<script src="/javascript/add-product.js"></script>
+<script src="/javascript/cart.js"></script>
+<script src="/javascript/delete-product.js"></script>
+<script src="/javascript/login.js"></script>
+<script src="/javascript/logout.js"></script>
+<script src="/javascript/signup.js"></script>
+<script src="/stylesheets/js/foundation.js"></script>
+<script src="/stylesheets/js/foundation.js.map"></script>
+<script src="/stylesheets/js/vendor.js"></script>
+<script src="/stylesheets/js/plugins"></script>
 
 
 </body>
