--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,20 +2,16 @@
 <h2 class="title pb-4">Create New Account:</h2><hr>
 <form class="signup-form">
   <div>
-    <label for="firstname-signup">First Name:</label>
-    <input type="text" id="firstname-signup" />
-  </div>
-  <div>
-    <label for="lastname-signup">Last Name:</label>
-    <input type="text" id="lastname-signup" />
+    <label for="name-signup">Name:</label>
+    <input type="text" id="name-signup" />
   </div>
 <div>
-    <label for="twitter-signup">twitter:</label>
-    <input type="text" id="twitter-signup" />
+    <label for="email-signup">Email:</label>
+    <input type="text" id="email-signup" />
   </div>
     <div>
-    <label for="github-signup">github:</label>
-    <input type="text" id="github-signup" />
+    <label for="user_id-signup">Username:</label>
+    <input type="text" id="user_id-signup" />
   </div>
   <div>
     <label for="password-signup">password:</label>
@@ -26,3 +22,5 @@
   </div>
 </form>
 </div>
+
+
