--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,7 +11,7 @@
   </div>
   <div>
     <button type="submit" class="button is-primary">login</button>
-    <a href="/register"><button type="button" class="button is-danger">Register</button></a>
+    <a href="/signup"><button type="button" class="button is-danger">Signup</button></a>
   </div>
 </form>
 </div>
