login and signup page updated

--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -54,13 +54,68 @@
         <img src="../../public/images/music-lesson-category.JPG" id = "music-lesson-picture" alt="Image" height="200" width="100%">      
         <button class = "button medium" id = "music-lesson-button">Music Lesson Category</button>
 
+    <div class="grid-container fluid">
+      <div class="grid-x grid-margin-x">
+        <div class="cell large-3 large-offset-4 ">
+          <h2 class="title pb-4">login:</h2>
+          <form class="login-form">
+            <div>
+              <label for="email-login">email:</label>
+              <input type="text" id="email-login" />
+            </div>
+            <div>
+              <label for="password-login">password:</label>
+              <input type="password" id="password-login" />
+            </div>
+            <div>
+              <button type="submit" class="button is-primary">login</button>
+              <a href="/signup"><button type="button" class="button is-danger">Signup</button></a>
+            </div>
+          </form>
+          </div>
+        </div>
+      </div>
+
+      <div class="grid-container fluid">
+        <div class="grid-x grid-margin-x">
+          <div class="cell large-3 large-offset-4 ">
+            <div class="column">
+              <h2 class="title pb-4">Create New Account:</h2><hr>
+              <form class="signup-form">
+                <div>
+                  <label for="name-signup">Name:</label>
+                  <input type="text" id="name-signup" />
+                </div>
+              <div>
+                  <label for="email-signup">Email:</label>
+                  <input type="text" id="email-signup" />
+                </div>
+                  <div>
+                  <label for="user_id-signup">Username:</label>
+                  <input type="text" id="user_id-signup" />
+                </div>
+                <div>
+                  <label for="password-signup">password:</label>
+                  <input type="password" id="password-signup" />
+                </div>
+                <div>
+                  <button type="submit" class="button is-primary">signup</button>
+                </div>
+              </form>
+              </div>
+            </div>
+          </div>
+        </div>
+  
+
+
 
       </div>
     </div>
   </div>
 
 
-  
+
    
   
 
