--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,20 +1,21 @@
-<div class="column">
-<h2 class="title pb-4">login:</h2><hr>
-<form class="login-form">
-  <div>
-    <label for="email-login">email:</label>
-    <input type="text" id="email-login" />
-  </div>
-  <div>
-    <label for="password-login">password:</label>
-    <input type="password" id="password-login" />
-  </div>
-  <div>
-    <button type="submit" class="button is-primary">login</button>
-    <a href="/signup"><button type="button" class="button is-danger">Signup</button></a>
-  </div>
-</form>
-</div>
-
-<!-- javascript file-->
-<script src="/javascript/login.js"></script>
+<div class="grid-container fluid">
+      <div class="grid-x grid-margin-x">
+        <div class="cell large-3 large-offset-4 ">
+          <h2 class="title pb-4">login:</h2>
+          <form class="login-form">
+            <div>
+              <label for="email-login">email:</label>
+              <input type="text" id="email-login" />
+            </div>
+            <div>
+              <label for="password-login">password:</label>
+              <input type="password" id="password-login" />
+            </div>
+            <div>
+              <button type="submit" class="button is-primary">login</button>
+              <a href="/signup"><button type="button" class="button is-danger">Signup</button></a>
+            </div>
+          </form>
+          </div>
+        </div>
+      </div>
