--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,26 +1,31 @@
-<div class="column">
-<h2 class="title pb-4">Create New Account:</h2><hr>
-<form class="signup-form">
-  <div>
-    <label for="name-signup">Name:</label>
-    <input type="text" id="name-signup" />
-  </div>
-<div>
-    <label for="email-signup">Email:</label>
-    <input type="text" id="email-signup" />
-  </div>
-    <div>
-    <label for="user_id-signup">Username:</label>
-    <input type="text" id="user_id-signup" />
-  </div>
-  <div>
-    <label for="password-signup">password:</label>
-    <input type="password" id="password-signup" />
-  </div>
-  <div>
-    <button type="submit" class="button is-primary">signup</button>
-  </div>
-</form>
-</div>
-
+<div class="grid-container fluid">
+        <div class="grid-x grid-margin-x">
+          <div class="cell large-3 large-offset-4 ">
+            <div class="column">
+              <h2 class="title pb-4">Create New Account:</h2><hr>
+              <form class="signup-form">
+                <div>
+                  <label for="name-signup">Name:</label>
+                  <input type="text" id="name-signup" />
+                </div>
+              <div>
+                  <label for="email-signup">Email:</label>
+                  <input type="text" id="email-signup" />
+                </div>
+                  <div>
+                  <label for="user_id-signup">Username:</label>
+                  <input type="text" id="user_id-signup" />
+                </div>
+                <div>
+                  <label for="password-signup">password:</label>
+                  <input type="password" id="password-signup" />
+                </div>
+                <div>
+                  <button type="submit" class="button is-primary">signup</button>
+                </div>
+              </form>
+              </div>
+            </div>
+          </div>
+        </div>
 
