--- a/views/partials/topbar.handlebars
+++ b/views/partials/topbar.handlebars
@@ -1,5 +1,5 @@
 <div class = "top-bar">                 
-  <h1 class = "store-main-title">Music World E-Commerce Store</h1>
+  <img class = "store-main-title" src="images/MWColored300dpi.png"></img>
       <div class="top-bar-right" id = "top-bar-right">
           <ul class = "menu" id = "top-navbar"> 
               <li><a class="menuBar" href = "homepage">Homepage</a></li>
