--- a/views/partials/topbar.handlebars
+++ b/views/partials/topbar.handlebars
@@ -1,5 +1,6 @@
 <div class = "top-bar">                 
   <img class = "store-main-title" src="images/MWColored300dpi.png"></img>
+   <h1 class="header-text">The World's Best Music Instruments</h1>
       <div class="top-bar-right" id = "top-bar-right">
           <ul class = "menu" id = "top-navbar"> 
               <li><a class="menuBar" href = "homepage">Homepage</a></li>
