--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -38,7 +38,7 @@ body{
        background: rgb(13 85 167);
        color: white;
        padding: 10px;
-       position: fixed;
+       position: relative;
         Width: 100%;
         bottom: 0;
    }
@@ -88,4 +88,9 @@ body{
 
 .menuBar:hover {
     color:yellow;
+}
+
+/* footer copyright */
+.copyright {
+    text-align: center;
 }
