--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,29 +1,39 @@
 
-<div class="grid-container fluid">
+<div class="grid-container fluid" id = "main-display">
     <div class="grid-x grid-margin-x">
      
       <div class="cell large-3  large-offset-3">
 
-        <img src="/images/piano-category.JPG" alt="Image" height="200" width="100%">        
-        <button class = "button medium" id = "piano-button">Piano Category</button>
-
+        <a href = "piano">
+        <img src="/images/piano-category.png" href = "piano" alt="Image" height="200" width="100%">        
+        <button class = "button medium" href = "piano" id = "piano-button">Piano Category</button>
+        </a>
+        <a href = "guitar">
         <img src="/images/guitar-amp-category.JPG" alt="Image" height="200" width="100%">        
         <button class = "button medium" id = "guitar-button">Guitar Category</button>
-
-        <img src="/images/live-sound-category.JPG" alt="Image" height="200" width="100%">        
-        <button class = "button medium" id = "live-sound-button">Live Sound</button>
+        </a>
+        <a href = "keyboard">
+        <img src="/images/keyboard-category.JPG" href = "keyboard" id = "keyboard-picture" alt="Image" height="200" width="100%">      
+        <button class = "button medium" id = "keyboard-button" href = "keyboard">Keyboard Category</button>
+        </a>
+        
       </div>
       
       <div class="cell large-3" id = "right-column">
 
+        <a href = "drum">
         <img src="/images/drum-percussion-category.JPG" alt="Image" height="200" width="100%">      
         <button class = "button medium" id = "drum-percussion-button">Drum and Percussion Category</button>
-
-        <img src="/images/keyboard-category.JPG" id = "keyboard-picture" alt="Image" height="200" width="100%">      
-        <button class = "button medium" id = "keyboard-button">Keyboard Category</button>
-
-        <img src="/images/music-lesson-category.JPG" id = "music-lesson-picture" alt="Image" height="200" width="100%">      
+        </a>
+        <a href = "sound">
+        <img src="/images/live-sound-category.JPG" alt="Image" height="200" width="100%">        
+        <button class = "button medium" id = "live-sound-button">Live Sound</button>
+        </a>
+        <a href = "lesson">
+        <img src="/images/music-lesson-category.png" id = "music-lesson-picture" alt="Image" height="200" width="100%">      
         <button class = "button medium" id = "music-lesson-button">Music Lesson Category</button>
+        </a>
+
       </div>
     </div>
   </div>
