--- a/views/piano.handlebars
+++ b/views/piano.handlebars
@@ -5,64 +5,115 @@
                 <div class="media-object">
                     <div class="media-object-section">
                         <div class="thumbnail">
-                            <img src="/images/piano/piano-large.jpg" alt="Image" height="400" width="350">
+
+
+                            {{!-- GOld plated PIano --}}
+                            <img src="/images/piano/goldpiano.jpg" alt="Image" height="400" width="350">
                         </div>
                     </div>                   
                     <div class="media-object-section" id = "piano-information">
-                        <h4>Item Id: 10101</h4>
-                        <h3 id = "item-name">Large Piano</h3>
-                        <h4>Price: $1514.99</h4>
+                        <h4>SKU: 10101</h4>
+                        <h3 id = "item-name">Gold Piano</h3>
+                        <h4>Price: $100,000.00</h4>
                         <h4>In Stock: 10</h4>
 
                     </div>
                 </div> 
+               
+                    
+                </section>
+                <button id="piano-1-button" class="btn">Product Description</button>
+                <div class="modal" id="modal"></div>
+                <div class="modal-header">
+                    <div class="title">Gold Plated Piano</div>
+                    <button class="close-button">&times;</button>
+                </div>
+                <div class="modal-body">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci dicta ea, laudantium, cupiditate sint enim pariatur vitae sed eligendi saepe harum? Nesciunt temporibus maxime dolor incidunt nostrum assumenda facilis expedita?
+                </div>
+                <div id="overlay"></div>
+                </section>
                 
-                <a href="product">
-                <button id="piano-1-button" class="btn">More Information</button>
+                
+                <a href="https://checkout.stripe.com/pay/cs_test_a1LKGDyJQKJMzCTOz444qN9FXUiWqd6GV4EZZdXYT6dE3oWQG9UtrA52tb#fidkdWxOYHwnPyd1blpxYHZxWjA0T2ZMMUJMTGNrb09IbTNhQkdrZmZNVXUxUH9oM2xkQWpqZExRVkxDbWtcUHM1dT1uYnVBal9jT2lCPFNicGxVaTdHSWo9YHZQTko3QW1%2FV0xnPWpHUW1GNTVHSXx2VENcYicpJ2hsYXYnP34nYnBsYSc%2FJzI9NT1hMzEwKGQwMmQoMTBhNChnNjM8KGBgNDY0ZGcyNGQwY2ZgN2dmMicpJ2hwbGEnPyc0YTJmMDEzMCg1MGEwKDEyM2EoZDIzZChmMzU2PDZhYGQzN2Y9NTZmZDcnKSd2bGEnPydjPGFkMTBnZihjPD09KDEzPTAoPDBhNSg0MGBnMWc3PD1nYTQ9PGE1NmcneCknZ2BxZHYnP15YKSdpZHxqcHFRfHVgJz8ndmxrYmlgWmxxYGgnKSd3YGNgd3dgd0p3bGJsayc%2FJ21xcXV2PyoqdnF3bHVgK2ZqaCd4JSUl">
+                <button id="button" class="btn">Buy Now</button>
                 </a> 
+                
                          
             </div>
         </div>
+
+
+        {{!-- Electric Piano --}}
         <div class="cell large-4" id = "piano-2">   
             <div class="row">
                 <div class="media-object">
                     <div class="media-object-section">
                         <div class="thumbnail">
-                            <img src="/images/piano/piano-electric-autotune.JPG" alt="Image" height="400" width="350">
+                            <img src="/images/keyboard/keyboard.jpg" alt="Image" height="400" width="350">
                         </div>
                     </div>                   
                     <div class="media-object-section" id = "piano-information">
-                        <h4>Item Id: 100111</h4>
-                        <h3 id = "item-name">Piano Electric Autotune</h3>
-                        <h4>Price: $3854.99</h4>
+                        <h4>SKU: 100111</h4>
+                        <h3 id = "item-name">Electric Piano</h3>
+                        <h4>Price: $385,542.99</h4>
                         <h4>In Stock: 06</h4>
 
                     </div>
                 </div>
+
+                </section>
+                <button id="piano-1-button" class="btn">Product Description</button>
+                <div class="modal" id="modal"></div>
+                <div class="modal-header">
+                    <div class="title">Electric Piano</div>
+                    <button class="close-button">&times;</button>
+                </div>
+                <div class="modal-body">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci dicta ea, laudantium, cupiditate sint enim pariatur vitae sed eligendi saepe harum? Nesciunt temporibus maxime dolor incidunt nostrum assumenda facilis expedita?
+                </div>
+                <div id="overlay"></div>
+                </section>
                 
-                <a href="product">
-                <button id="piano-1-button" class="btn">More Information</button>
+                <a href="https://checkout.stripe.com/pay/cs_test_a1VtxPRsniH2j1YCDXyuyyY3UBAEotXP3gJXq6SHmS35GtAkD3wJrhLb7u#fidkdWxOYHwnPyd1blpxYHZxWjA0T2ZMMUJMTGNrb09IbTNhQkdrZmZNVXUxUH9oM2xkQWpqZExRVkxDbWtcUHM1dT1uYnVBal9jT2lCPFNicGxVaTdHSWo9YHZQTko3QW1%2FV0xnPWpHUW1GNTVHSXx2VENcYicpJ2hsYXYnP34nYnBsYSc%2FJzI9NT1hMzEwKGQwMmQoMTBhNChnNjM8KGBgNDY0ZGcyNGQwY2ZgN2dmMicpJ2hwbGEnPyc0YTJmMDEzMCg1MGEwKDEyM2EoZDIzZChmMzU2PDZhYGQzN2Y9NTZmZDcnKSd2bGEnPydjMmdnYGdjMChgYzJgKDE2ZjUoZzRmMChjYGNgYDI3PDY8MTNkNjY1Y2QneCknZ2BxZHYnP15YKSdpZHxqcHFRfHVgJz8ndmxrYmlgWmxxYGgnKSd3YGNgd3dgd0p3bGJsayc%2FJ21xcXV2PyoqdnF3bHVgK2ZqaCd4JSUl">
+                <button id="button" class="btn">Buy Now</button>
                 </a> 
              </div>                  
         </div>
+
+
+        {{!-- music lessons --}}
         <div class="cell large-4" id = "piano-3">   
             <div class="row">
                 <div class="media-object">
                     <div class="media-object-section">
                         <div class="thumbnail">
-                            <img src="/images/piano/piano-beginner.JPG" alt="Image" height="400" width="350">
+                            <img src="/images/music-lesson/lessons.JPG" alt="Image" height="400" width="350">
                         </div>
                     </div>                   
                     <div class="media-object-section" id = "piano-information">
-                        <h4>Item Id: 100121</h4>
-                        <h3 id = "item-name">Piano Beginner</h3>
-                        <h4>Price: $877.99</h4>
+                        <h4>SKU: 100121</h4>
+                        <h3 id = "item-name">Private Lessons</h3>
+                        <h4>Price: $1,000/hr</h4>
                         <h4>In Stock: 02</h4>
 
                     </div>
                 </div>
-                <a href="product">
-                <button id="piano-1-button" class="btn">More Information</button>
+                </section>
+                <button id="piano-1-button" class="btn">Product Description</button>
+                <div class="modal" id="modal"></div>
+                <div class="modal-header">
+                    <div class="title">Music Private Lessons</div>
+                    <button class="close-button">&times;</button>
+                </div>
+                <div class="modal-body">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci dicta ea, laudantium, cupiditate sint enim pariatur vitae sed eligendi saepe harum? Nesciunt temporibus maxime dolor incidunt nostrum assumenda facilis expedita?
+                </div>
+                <div id="overlay"></div>
+                </section>
+            
+                <a href=" https://checkout.stripe.com/pay/cs_test_a1MMX7ikEDLW8y4RofS5YvHWuXl9gub0kv0k3hEoZVattNCy1HxnmIYPjO#fidkdWxOYHwnPyd1blpxYHZxWjA0T2ZMMUJMTGNrb09IbTNhQkdrZmZNVXUxUH9oM2xkQWpqZExRVkxDbWtcUHM1dT1uYnVBal9jT2lCPFNicGxVaTdHSWo9YHZQTko3QW1%2FV0xnPWpHUW1GNTVHSXx2VENcYicpJ2hsYXYnP34nYnBsYSc%2FJzI9NT1hMzEwKGQwMmQoMTBhNChnNjM8KGBgNDY0ZGcyNGQwY2ZgN2dmMicpJ2hwbGEnPyc0YTJmMDEzMCg1MGEwKDEyM2EoZDIzZChmMzU2PDZhYGQzN2Y9NTZmZDcnKSd2bGEnPydjMmdnYGdjMChgYzJgKDE2ZjUoZzRmMChjYGNgYDI3PDY8MTNkNjY1Y2QneCknZ2BxZHYnP15YKSdpZHxqcHFRfHVgJz8ndmxrYmlgWmxxYGgnKSd3YGNgd3dgd0p3bGJsayc%2FJ21xcXV2PyoqdnF3bHVgK2ZqaCd4JSUl">
+                <button id="button" class="btn">Buy Now</button>
                 </a>
              </div>                  
         </div>
