login-signup css done

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,4 @@
+<main>
 <div class="grid-container fluid" id = "main-display">
     <div class="grid-x grid-margin-x">
      
@@ -15,10 +16,28 @@
         <img src="/images/keyboard-category.JPG" href = "keyboard" id = "keyboard-picture" alt="Image" height="200" width="100%">      
         <button class = "button medium" id = "keyboard-button" href = "keyboard">Keyboard Category</button>
         </a>
-      </div>    
-      
-      <div class="cell large-3 large-offset-6"  id = "right-column">
+      </div>
 
+      <div class="cell large-6"  id = "center-column">
+        
+       
+        <img src="/images/placeholder_pic.JPG" alt="Image" height="100%" width="100%">
+        
+        <img src="/images/placeholder_pic-2.jfif" alt="Image" height="100px" width="100%">      
+          
+        
+        {{!-- <a href = "sound">
+        <img src="/images/live-sound-category.JPG" alt="Image" height="200" width="100%">        
+        <button class = "button medium" id = "live-sound-button">Live Sound</button>
+        </a>
+        <a href = "lesson">
+        <img src="/images/music-lesson-category.png" id = "music-lesson-picture" alt="Image" height="200" width="100%">      
+        <button class = "button medium" id = "music-lesson-button">Music Lesson Category</button>
+        </a> --}}
+        
+      </div>
+
+      <div class="cell large-3"  id = "right-column">
         <a href = "drum">
         <img src="/images/drum-percussion-category.JPG" alt="Image" height="200" width="100%">      
         <button class = "button medium" id = "drum-percussion-button">Drum and Percussion Category</button>
@@ -28,9 +47,11 @@
         <button class = "button medium" id = "live-sound-button">Live Sound</button>
         </a>
         <a href = "lesson">
-        <img src="/images/music-lesson-category.png" id = "music-lesson-picture" alt="Image" height="200" width="100%">      
+        <img src="/images/music-lesson-category-1.png" id = "music-lesson-picture" alt="Image" height="200" width="100%">      
         <button class = "button medium" id = "music-lesson-button">Music Lesson Category</button>
         </a>
+        
       </div>
     </div>
   </div>
+  </main>
