--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -97,6 +97,7 @@ body{
 #main-display{
     margin-bottom: 100px;
     margin-top: 5px;
+    background: rgb(13 85 167);
 }
 #piano-1, #piano-2, #piano-3{
     border: solid rgb(2, 2, 87) 5px;
@@ -148,4 +149,64 @@ body{
 #piano-1.cell.large-4, #piano-2.cell.large-4, #piano-3.cell.large-4   {
     margin-top: 2rem;
     border-radius: 1rem;
+}
+
+#login-title, #signup-title{
+    font-family: sans-serif;
+    color: white;
+    font-weight: bold;   
+}
+#login-page {
+    background: rgb(13 85 167);
+    margin-top: 250px;
+    padding:30px;
+    padding-left: 100px;
+    padding-right: 100px;
+    border-radius: 40px;
+}
+
+#email-heading, #password-heading, #name-heading, #username-heading {
+    font-family: sans-serif;
+    color: white;
+    font-weight: bold;
+}
+#email-login, #password-login, #name-signup, #email-signup, #user_id-signup, #password-signup{
+    padding: 5px;
+    border-radius: 5px;
+}
+
+#login-btn, #signup-btn{
+    padding: 5px;
+    padding-left: 30px ;
+    padding-right: 30px;
+    border-radius: 8px;
+    font-family: sans-serif;
+    font-weight: bolder;
+    color: white;
+    margin-top: 20px;
+    padding-top: 10px;
+}
+
+#signup-page {
+    background: rgb(13 85 167);
+    margin-top: 180px;
+    padding:30px;
+    padding-left: 100px;
+    padding-right: 100px;
+    border-radius: 40px;
+}
+
+#product-description{
+    padding: 50px;
+    font-family: sans-serif;
+    color: rgb(9, 9, 121);
+    
+
+}
+
+#picture-list{
+    margin-top: 150px;
+}
+#sku-id, #product-name-id, #price-id, #stock-id, #category-list-id{
+    font-weight: bold;
 }
