--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,31 +1,34 @@
-<div class="grid-container fluid">
-        <div class="grid-x grid-margin-x">
-          <div class="cell large-3 large-offset-4 ">
-            <div class="column">
-              <h2 class="title pb-4">Create New Account:</h2><hr>
-              <form class="signup-form">
-                <div>
-                  <label for="name-signup">Name:</label>
-                  <input type="text" id="name-signup" />
-                </div>
-              <div>
-                  <label for="email-signup">Email:</label>
-                  <input type="text" id="email-signup" />
-                </div>
-                  <div>
-                  <label for="user_id-signup">Username:</label>
-                  <input type="text" id="user_id-signup" />
-                </div>
-                <div>
-                  <label for="password-signup">password:</label>
-                  <input type="password" id="password-signup" />
-                </div>
-                <div>
-                  <button type="submit" class="button is-primary">signup</button>
-                </div>
-              </form>
-              </div>
-            </div>
-          </div>
-        </div>
 
+
+<div class="grid-container fluid">
+    <div class="grid-x grid-margin-x">
+      <div class="cell large-3 large-offset-4 " id = "signup-page">
+        
+        <h1 class="title pb-4" id="signup-title">Create New Account:</h1>
+        <form class="signup-form">
+          <div >
+            <label id="name-heading"><h5>Name:</h5></label>
+            <input type="text" placeholder="Name" id = "name-signup">
+          </div>
+          <div >
+            <label id="email-heading"><h5>Email:</h5></label>
+            <input type="Email" placeholder="Email" id = "email-signup">
+          </div>
+          <div >
+            <label id="username-heading"><h5>Username:</h5></label>
+            <input type="text" placeholder="Username" id = "user_id-signup">
+          </div>          
+          <div >
+            <label id="password-heading"><h5>Password:</h5></label>
+            <input type="password" placeholder="Password" id = "password-signup">
+          </div>
+          
+          
+          <div>
+            <button type="submit" class="success button" id = "signup-btn"><h5>Signup</h5></button>
+            
+          </div>
+        </form>
+      </div>
+    </div>
+</div>
